test-cases/negative/test_054_for_without_iterator.lay
# negative test: for each without iterator variable
# expected: parser should reject this

for each in list do
  print 'item'
end for


